Do not treat substitute-data resources as having successful HTTP status codes.

Some embedders of Blink (Chrome in particular) rely on error pages having an HTTP
status code of `0`. [1] changed this behavior to synthesize a 200 status code. This
patch changes that behavior back to the original expectation, matching the
expectation that non-network requests don't have network status information.

[1]: https://chromium.googlesource.com/chromium/blink/+/63b8349e922a3691bb77f74d7b2f143a5f023626

BUG=656845

Review-Url: https://codereview.chromium.org/2676443004
Cr-Commit-Position: refs/heads/master@{#455810}

Former-commit-id: 1709b0599a7329585a3d781b21b1cbbb15379d7c